<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Historia Pojazdu</string>

    <!-- menu -->
    <string name="action_about">O programie</string>
    <string name="action_download">Pobierz PDF</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_help">Pomoc</string>

    <!-- inputs -->
    <string name="rejVal"></string>
    <string name="vinVal"></string>
    <string name="rejestracjaVal"></string>
    <string name="rejHint">np. WA12345</string>
    <string name="vinHint">np. SUP4RA1R5BJ312970</string>
    <string name="dataHint">np. 26.01.1982</string>

    <!-- input screen -->
    <string name="captchaTxtStr">CAPTCHA:</string>
    <string name="captcha">CAPTCHA</string>
    <string name="sendCap">Sprawdź</string>
    <string name="rejCap">Nr rejestracyjny:</string>
    <string name="vinCap">VIN:</string>
    <string name="dataCap">Data pierwszej rej.:</string>
    <string name="refresh">Odśwież</string>

    <!-- messages -->
    <string name="wrongCaptchaMsg">Wprowadzona CAPTCHA była błędna. Spróbuj ponownie!</string>
    <string name="notFoundMsg">Nie znaleziono pojazdu o podanych danych. Sprawdź poprawność wprowadzonych danych i spróbuj ponownie.</string>
    <string name="errorMsg">Błąd!</string>
    <string name="error">Błąd: </string>
    <string name="errorMore">\nKomunikat: </string>
    <string name="notfMsg">Nie znaleziono!</string>
    <string name="aboutContentMsg">Historia Pojazdu\nCopyright by v3l0c1r4pt0r\nStrona domowa: www.v3l0c1r4pt0r.tk</string>
    <string name="downloadedMsg">Raport został zapisany jako </string>
    <string name="runtimeError">Błąd podczas tworzenia aktywności.\nSkontaktuj się z twórcą aplikacji i podaj następującą przyczynę: </string>

    <!-- tabs -->
    <string name="title_activity_results">Wyniki</string>
    <string name="title_activity_test">Wyniki</string>
    
    <string name="title_ogolne">Ogólne</string>
    <string name="title_techniczne">Techniczne</string>
    <string name="title_dokumenty">Dokumenty</string>
    <string name="title_os">Oś czasu</string>
    
    <string name="title_szukaj">Szukaj</string>
    <string name="title_historia">Historia</string>

    <!-- overview -->
    <string name="comma">, </string>
    <string name="przebiegCap">Przebieg:</string>
    <string name="przebiegVal">nieznany</string>
    <string name="jednostkaVal"> km</string>
    <string name="ocCap">OC</string>
    <string name="przegladCap">Przegląd</string>
    <string name="kradzionyCap">Pojazd kradziony!</string>
    <string name="markaVal">-</string>
    <string name="typVal">-</string>
    <string name="modelVal">-</string>
    <string name="statusCap">Status:</string>
    <string name="statusVal">-</string>
    <string name="rokCap">Rok produkcji:</string>
    <string name="rokVal">----</string>
    <string name="rodzajCap">Typ:</string>
    <string name="rodzajVal">-, -</string>
    <string name="silnikCap">Silnik:</string>
    <string name="pojemnoscCap">Pojemność silnika:</string>
    <string name="pojemnoscVal">--- cm³</string>
    <string name="paliwoCap">Paliwo:</string>
    <string name="paliwoVal">-</string>

    <!-- technical -->
    <string name="mocCap">Moc silnika:</string>
    <string name="mocVal">-- kW</string>
    <string name="emisjaCap">Emisja CO₂:</string>
    <string name="emisjaVal">- g/km</string>
    <string name="zuzycieCap">Średnie zużycie paliwa na 100 km:</string>
    <string name="zuzycieVal">- l</string>
    <string name="miejscaCap">Liczba miejsc:</string>
    <string name="miejscaVal">-</string>
    <string name="siedzaceCap">W tym siedzących:</string>
    <string name="siedzaceVal">-</string>
    <string name="masaCap">Masa własna pojazdu:</string>
    <string name="masaVal">--- kg</string>
    <string name="przyczepaHamCap">Maksymalna masa całkowita przyczepy z hamulcem:</string>
    <string name="przyczepaHamVal">--- kg</string>
    <string name="przyczepaBezCap">Maksymalna masa całkowita przyczepy bez hamulca:</string>
    <string name="przyczepaBezVal">--- kg</string>
    <string name="ladownoscCap">Dopuszczalna ładowność:</string>
    <string name="ladownoscVal">--- kg</string>
    <string name="dmcCap">Dopuszczalna masa całkowita:</string>
    <string name="dmcVal">--- kg</string>
    <string name="osieCap">Liczba osi:</string>
    <string name="osieVal">-</string>
    <string name="rozstawOsiCap">Rozstaw osi:</string>
    <string name="rozstawOsiVal">-</string>
    <string name="rozstawKolCap">Rozstaw kół:</string>
    <string name="rozstawKolVal">-</string>
    <string name="naciskNaOsCap">Maksymalny nacisk na oś:</string>
    <string name="naciskNaOsVal">-</string>

    <!-- documents -->
    <string name="rejestracjaCap">Data pierwszej rejestracji:</string>
    <string name="dowodCap">Data wydania dowodu rejestracyjnego:</string>
    <string name="dowodVal">--.--.----</string>
    <string name="kartaCap">Data wydania karty pojazdu:</string>
    <string name="kartaVal">--.--.----</string>
    <string name="homoCap">Świadectwo homologacji</string>
    <string name="kategoriaCap">Kategoria:</string>
    <string name="kategoriaVal">--</string>
    <string name="wersjaCap">Wersja:</string>
    <string name="wersjaVal">---</string>
    <string name="numerCap">Numer:</string>
    <string name="numerVal">-</string>
    <string name="wariantCap">Wariant:</string>
    <string name="wariantVal">--</string>

    <!-- time axis -->
    <string name="dateCap">Data</string>
    <string name="zdarzenieCap">Zdarzenie</string>
    <string name="podsumowanieCap">Podsumowanie</string>
    <string name="wlascicieleCap">Właściciele (łącznie):</string>
    <string name="wspolwlascicieleCap">Współwłaściciele (łącznie):</string>
    <string name="aktualnyCap">Stan aktualny</string>
    <string name="wlascicieleAkCap">Właściciele (obecnie):</string>
    <string name="wspolwlascicieleAkCap">Współwłaściciele (obecnie):</string>
    <string name="wojewodztwoCap">Województwo:</string>
    <string name="ocFullCap">Polisa OC:</string>
    <string name="przegladFullCap">Badanie techniczne:</string>
    <string name="kradzionyFullCap">Pojazd oznaczony w ewidencji jako kradziony!</string>

    <!-- help -->
    <string name="title_activity_help">Pomoc</string>
    <string name="hello_world">Hello world!</string>
    <string name="dowod">Dowód rejestracyjny</string>

</resources>