<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tk.v3l0c1r4pt0r.cepik.TechFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/pojemnoscCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pojemnoscCap" />
	
	    <TextView
	        android:id="@+id/pojemnoscVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/pojemnoscVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/mocCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/mocCap" />
	
	    <TextView
	        android:id="@+id/mocVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mocVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/paliwoCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/paliwoCap" />
	
	    <TextView
	        android:id="@+id/paliwoVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/paliwoVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <LinearLayout
	        android:baselineAligned="false"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp" >
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical" >

			    <TextView
			        android:id="@+id/miejscaCap"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/miejscaCap" />
			
			    <TextView
			        android:id="@+id/miejscaVal"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/miejscaVal"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    	</LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:orientation="vertical" >

			    <TextView
			        android:id="@+id/siedzaceCap"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/siedzaceCap" />
			
			    <TextView
			        android:id="@+id/siedzaceVal"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/siedzaceVal"
			        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    	</LinearLayout>
	    
	    </LinearLayout>

	    <TextView
	        android:id="@+id/masaCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/masaCap" />
	
	    <TextView
	        android:id="@+id/masaVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/masaVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/przyczepaHamCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/przyczepaHamCap" />
	
	    <TextView
	        android:id="@+id/przyczepaHamVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/przyczepaHamVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/przyczepaBezCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/przyczepaBezCap" />
	
	    <TextView
	        android:id="@+id/przyczepaBezVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/przyczepaBezVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/dmcCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/dmcCap" />
	
	    <TextView
	        android:id="@+id/dmcVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dmcVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/osieCap"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/osieCap"
	        android:layout_marginTop="10dp" />
	
	    <TextView
	        android:id="@+id/osieVal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/osieVal"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    </LinearLayout>

</ScrollView>
